syntax ="proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "net.atos.daf.ct2.organizationservice";
package net.atos.daf.ct2.organizationservice;


// The greeting service definition.
service OrganizationService {
  // Sends a greeting
  rpc Create (OrgCreateRequest) returns (OrganizationCreateData);
  rpc Update (OrgUpdateRequest) returns (OrganizationUpdateData);
 // rpc Delete (IdRequest) returns (OrganizationResponse);
  rpc Get (IdRequest) returns (OrganizationGetData); 
   rpc GetAll(IdRequest)returns(GetAllOrgResponse);

  // Account Preference Mthod
  rpc CreatePreference (AccountPreference) returns (AccountPreferenceResponse);
  rpc UpdatePreference (AccountPreference) returns (AccountPreferenceResponse);
  rpc DeletePreference (IdRequest) returns (AccountPreferenceResponse);
  rpc GetPreference (IdRequest) returns (OrganizationPreferenceResponse);

//ORG Relationship manager
  rpc CreateRelationship (RelationshipCreateRequest) returns (RelationshipCreateResponse);
  rpc UpdateRelationship (RelationshipCreateRequest) returns (RelationshipCreateResponse);
  rpc DeleteRelationship (RelationshipDeleteRequest) returns (RelationshipDeleteResponse);
  rpc GetRelationship (RelationshipCreateRequest) returns (RelationshipGetResponse);

  rpc CreateOrgRelationship (OrgRelationshipCreateRequest) returns (OrgRelationshipCreateResponse);
  rpc EndOrgRelationShip (EndOrgRelationShipRequest) returns (EndOrgRelationshipResponse);
  rpc AllowChaining (ChainingRequest) returns (ChainingResponse); 
  rpc GetOrgRelationshipMapping (OrgRelationshipMappingGetRequest) returns (OrgRelationshipGetResponse);
  rpc GetAllOrganizations (OrganizationByID) returns (OrganizationprimaryFieldsListResponse);
}

message OrganizationprimaryFieldsListResponse{
 repeated OrganizationprimaryFieldsResponse Response = 1;
}

message OrganizationByID{
 int32 id = 1;
}

message OrganizationprimaryFieldsResponse{
 int32 id = 1;
 string name = 2;
}
message OrgRelationshipMappingGetRequest
{
    int32 id = 1;
    int32 OrgRelationId =2;
    int32 RelationShipId = 3;
    int32 VehicleGroupID = 4;
    int32 OwnerOrId = 5;
    int32 CreatedOrgId = 6;
    int32 TargetOrgId = 7;
    int64 StartDate= 8;
    int64 EndDate=9;
    bool AllowChain = 10;
    int64 createdAt=11;
    string VehicleGroupName=12;
    string RelationshipName=13;
    string OrganizationName=14; 
}

message OrgRelationshipGetResponse
{
    
    repeated OrgRelationshipMappingGetRequest OrgRelationshipMappingList=1;
    Responcecode Code=2;
    string Message =3;
}

message GetAllOrgResponse{
  repeated OrgGetResponse OrganizationList=1;
  Responcecode Code=2;
  string Message = 3;
}
message ChainingRequest
{
int32 OrgRelationID=1;
bool AllowChaining=2;
}
message ChainingResponse
{
 Responcecode Code=1;
  string Message = 2;
  int32 orgRelationShipid = 3;
}

message EndOrgRelationShipRequest{
repeated int32 orgRelationShipid = 1;
}

message EndOrgRelationshipResponse
{
    Responcecode Code=1;
  string Message = 2;
  repeated int32 orgRelationShipid = 3;
}
message OrgRelationshipCreateRequest
{
    int32 OrgRelationId =1;
    int32 RelationShipId = 2;
    repeated int32 VehicleGroupID = 3;
    int32 OwnerOrId = 4;
    int32 CreatedOrgId = 5;
    repeated int32 TargetOrgId = 6;
    int64 StartDate= 7;
    int64 EndDate=8;
    bool AllowChain = 9;
    int64 createdAt=10;
}
message OrgRelationshipCreateResponse{
  Responcecode Code=1;
  string Message = 2;
  repeated int32 relationship = 3;
 
}

message RelationshipGetRequest{
    int32 id = 1;
    int32 organizationId=2;
    string name=3;
    string description =4;
    int32 level=5;
    string code=6;
    repeated int32 featureIds=7;    
    int32 featuresetid =8; 
    bool isActive=9;
    int64 CreatedAt=10;
}
message RelationshipGetResponse{
 Responcecode code=1;  
  string message = 2;
   repeated RelationshipGetRequest RelationshipList=3;
}
message RelationshipCreateRequest{
    int32 id = 1;
    int32 organizationId=2;
    string name=3;
    string description =4;
    int32 level=5;
    string code=6;
    repeated int32 featureIds=7;
    int32 featuresetid =8; 
    bool isActive=9;
    int64 CreatedAt=10;
}

message RelationshipCreateResponse{
  Responcecode Code=1;
  string Message = 2;
  RelationshipCreateRequest relationship = 3;
 
}
    message RelationshipDeleteRequest{
      int32 Id = 1;
    }
   message RelationshipDeleteResponse
    {
     Responcecode Code=1;
     string Message = 2;
     RelationshipDeleteRequest RelationshipRequest= 3;      
    }

  message OrgCreateRequest {
    int32 id = 1;
    string org_id=2;
    string type =3;
    string name=4;
    string address_Type=5;
    string street=6;
    string street_number =7; 
    string postal_code =8;    
    string city=9;
    string country_code =10;
    string reference_date =11;   
  }
  message OrgUpdateRequest {
    int32 id = 1;
    string org_id=2;
    string type =3;
    string name=4;
    string address_Type=5;
    string street=6;
    string street_number =7; 
    string postal_code =8;    
    string city=9;
    string country_code =10;
    string reference_date =11;
    string vehicle_default_opt_in=12;
    string driver_default_opt_in=13;   
  }
// The response message containing the greetings.
message OrgGetResponse {  
    int32 Id=1;
    string OrganizationId= 2;
    google.protobuf.StringValue Type=3;
    google.protobuf.StringValue Name=4;
    google.protobuf.StringValue AddressType=5;
    google.protobuf.StringValue AddressStreet=6;
    google.protobuf.StringValue AddressStreetNumber=7; 
    google.protobuf.StringValue PostalCode=8;    
    google.protobuf.StringValue City=9;
    google.protobuf.StringValue CountryCode=10;   
    google.protobuf.StringValue Referenced=11;  
    bool IsActive=12;  
    google.protobuf.StringValue VehicleOptIn=13;
    google.protobuf.StringValue DriverOptIn=14;   
}

message OrganizationCreateData {
  Responcecode Code=1;
  string Message = 2;
  OrgUpdateRequest Organization = 3;
}

message OrganizationUpdateData {
  Responcecode Code=1;
  string Message = 2;
  OrgUpdateRequest Organization = 3;
}

message OrganizationGetData {
  Responcecode Code=1;
  string Message = 2;
  OrgGetResponse Organization = 3; 
}

 message AccountPreference
    {
        int32 Id =1;
        int32 Ref_Id =2;
        string preferenceType =3;
        int32 LanguageId =4;
        int32 TimezoneId =5;
        int32 CurrencyId =6;
        int32 UnitId = 7;
        int32 VehicleDisplayId =8;
        int32 DateFormatId =9;
        string DriverId =10;
        int32 TimeFormatId=11;
        int32 LandingPageDisplayId=12;
    }
    message AccountPreferenceResponse
    {
     Responcecode Code=1;
     string Message = 2;
     AccountPreference AccountPreference= 3;      
    }

  message IdRequest {
  int32 Id = 1;
}



  enum Responcecode{
      Success = 0;
      Failed = 1;
      Conflict = 2;
      NotFound = 3;
    }
 message AccountPreferenceFilter
    {
        int32 Id =1;
    }
    
 message OrganizationPreference
    {
        int32 Id =1;
        int32 OrgId =2;
        string Language =3;
        string Timezone =4;
        string Currency =5;
        string Unit = 6;
        string VehicleDisplay =7;
        string DateFormat =8;
        string TimeFormat=9;
        string LandingPageDisplay=10;
    }
   message OrganizationPreferenceResponse
    {
     Responcecode Code=1;
     string Message = 2;
     OrganizationPreference OrganizationPreference= 3;      
    }